[DROOLS-6530] use KiePath for internal paths representation (#3828)
* [DROOLS-6530] use KiePath for internal paths representation

* wip

* wip

* wip

* wip

* improve KiePathTest

* wip